much better understanding

--- a/index.html
+++ b/index.html
@@ -3,6 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
+</head>
+<body>
+    <main>
+        <div id="status">ONLINE</div>
+        <img src="https://picsum.photos/125" alt="placeholder avatar" srcset=""> 
+        <h1 id="name">Tyler Preston</h1>
+        <section id="occupation">
+            <p>⭐️ ⭐️ ⭐️ ⭐️ ⭐️</p>
+            <p>Full-Stack Developer</p>
+        </section>
+        <section id="brand">
+            <p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+        </section>
+        <section id="offer">
+            <p><strong>5 minutes free</strong></p>
+            <p>then $5.99/min</p>
+        </section>
+        <section id="contact">
+            <p>📞</p>
+            <p>✉️</p>
+        </section>
+    </main>
+    
+</body>
+</html>
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/5bde9e1c15.js" crossorigin="anonymous"></script>
@@ -33,4 +69,4 @@
         </footer>
     </div>
 </body>
-</html>
+</html> -->
